syntax = "proto3";


package exchange;

message ExchangeRequest {
  double value = 1;
  string from = 2;
  string to = 3;
}

message ExchangeResponse {
  double value = 1;
}

service ExchangeService {
  rpc Exchange (ExchangeRequest) returns (ExchangeResponse);
}